--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
         android:targetSdkVersion="17" />
 
 
-    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.READ_CONTACTS"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -69,6 +69,16 @@
             android:label="@string/title_activity_add_contact"
             android:theme="@style/AppTheme.NoActionBar" >
         </activity>
+
+        <activity android:name=".CreateNewPlacesActivity"
+            android:label="CreateNewPlacesActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".SelectInterestsActivity"
+            android:label="SelectInterestsActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".ShowPlacesActivity"
+            android:label="ShowPlacesActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
 
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
